--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -15,9 +15,11 @@
     <meta name="theme-color" content="#ffffff">
     <!-- Подключен файл со стандартными стилями бустрап -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    {% block title %}
-      Заголовок отсутствует!
-    {% endblock %}
+    <title>
+      {% block title %}
+        Заголовок отсутствует!
+      {% endblock %}
+    </title>
   </head>
   <body>
     <header>
