--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -30,7 +30,7 @@
         Контент отсутствует!
       {% endblock %}
     </main>
-    <footer class="page-footer font-small blue border-top">
+    <footer class="border-top text-center py-3">
       {% include 'includes/footer.html' %}
     </footer>
   </body>
