--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -16,7 +16,7 @@
           Автор: {{ post.author.get_full_name }}
         </li>
         <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
+          Дата публикации: {{ post.pub_date|date:"j E Y" }}
         </li>
       </ul>
       <p>{{ post.text }}</p>
