--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -33,15 +33,13 @@
     </title>
   </head>
   <body>
-    <header>
-      {% include "includes/header.html" %}
-    </header>
+    {% include "includes/header.html" %}
     <main>
-      {% block content %}
-      {% endblock %}
+      <div class="container py-5">
+        {% block content %}
+        {% endblock %}
+      </div>
     </main>
-    <footer class="border-top text-center py-3">
-      {% include "includes/footer.html" %}
-    </footer>
+    {% include "includes/footer.html" %}
   </body>
 </html>
