--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,18 +1,16 @@
 {% extends "base.html" %}
 {% block title %}
-  {{ title }}
+  Записи сообщества {{ group.title }}
 {% endblock %}
 {% block content %}
-  <div class="container py-5">
-    <h1>{{ group.title }}</h1>
-    <p>{{ group.description }}</p>
-    {% for post in posts %}
-      <ul>
-        <li>Автор: {{ post.author.get_full_name }}</li>
-        <li>Дата публикации: {{ post.pub_date|date:"j E Y" }}</li>
-      </ul>
-      <p>{{ post.text }}</p>
-      {% if not forloop.last %}<hr>{% endif %}
-    {% endfor %}
-  </div>
+  <h1>{{ group.title }}</h1>
+  <p>{{ group.description|linebreaksbr }}</p>
+  {% for post in posts %}
+    <ul>
+      <li>Автор: {{ post.author.get_full_name }}</li>
+      <li>Дата публикации: {{ post.pub_date|date:"j E Y" }}</li>
+    </ul>
+    <p>{{ post.text|linebreaksbr }}</p>
+    {% if not forloop.last %}<hr>{% endif %}
+  {% endfor %}
 {% endblock %}
